// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnimalsController createAnimal should create an animal 1`] = `
{
  "_id": "507f1f77bcf86cd799439011",
  "animalName": "Dog",
  "createdAt": 2023-03-19T18:27:12.933Z,
  "description": "new dog created",
  "type": "MAMMALS",
}
`;

exports[`AnimalsController createAnimal should throw Interal Servel Error Exception when something goes worng with mongodb connection 1`] = `[InternalServerErrorException: Internal Server Error]`;

exports[`AnimalsController createAnimal should throw error - BadRequestException - when animal already exist 1`] = `[BadRequestException: Animal already exist in database]`;

exports[`AnimalsController addAnimalsLsit should add list of animals 1`] = `
[
  {
    "_id": "id1",
    "animalName": "Elephant",
    "createdAt": "2022-02-02",
    "type": "MAMMALS",
  },
  {
    "_id": "id2",
    "animalName": "Lion",
    "createdAt": "2022-02-02",
    "type": "MAMMALS",
  },
]
`;

exports[`AnimalsController addAnimalsLsit should throw Interal Servel Error Exception when something goes worng with mongodb connection 1`] = `[InternalServerErrorException: Internal Server Error]`;

exports[`AnimalsController addAnimalsLsit should throw error - BadRequestException - when one of animals already exist 1`] = `[BadRequestException: Animals already exist in database]`;

exports[`AnimalsController getAllAnimals should return an array of animals 1`] = `
[
  {
    "animalName": "Human",
    "createdAt": 2023-03-19T18:27:12.933Z,
    "description": "test description",
    "type": "MAMMALS",
  },
]
`;

exports[`AnimalsController getAllAnimals should throw an error when there is something wrong with mongodb connection 1`] = `[InternalServerErrorException: Internal Server Error]`;

exports[`AnimalsController getAnimal should return an animal 1`] = `
{
  "_id": "507f1f77bcf86cd799439011",
  "animalName": "Human",
  "createdAt": 2023-03-19T18:27:12.933Z,
  "description": "test description",
  "type": "MAMMALS",
}
`;

exports[`AnimalsController getAnimal should throw Internal Server Error Exception when mongodb fail 1`] = `[InternalServerErrorException: Internal Server Error]`;

exports[`AnimalsController getAnimal should throw error when animal not found 1`] = `[NotFoundException: Not Found]`;

exports[`AnimalsController updateAnimal should throw Interal Servel Error Exception when something goes worng with mongodb connection 1`] = `[InternalServerErrorException: Internal Server Error]`;

exports[`AnimalsController updateAnimal should throw error when animal not found 1`] = `[NotFoundException: Not Found]`;

exports[`AnimalsController updateAnimal should update an animal 1`] = `
{
  "_id": "507f1f77bcf86cd799439011",
  "animalName": "Cat",
  "createdAt": 2023-03-19T18:27:12.933Z,
  "description": "description after update",
  "type": "BIRDS",
}
`;
